# scanner

./: .bawbelignore  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HOW-TO-USE.md  LANGUAGE.md  LICENSE  MANIFEST.in  PROJECT_CONTEXT.example.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  action.yml  bawbel.yml  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  server.json  setup.sh  smithery_scan_result.json
.claude/: architecture.md  commands.md  contributing.md  dev-workflow.md  security.md  testing.md
.claude/skills/: add-detection-rule.md  add-engine.md  security-review.md  write-test.md
.github/workflows/: ci.yml  pr-review.yml  publish.yml
config/: __init__.py  default.py
docs/: .bawbel-pins.json  README.md  index.html
docs/adr/: 0001-three-layer-architecture.md  0002-evidence-fields-first-class-output.md  0003-engine-separation.md  0004-oop-utils.md  0005-error-codes.md  0006-no-exceptions.md
docs/agents/: README.md
docs/agents/prds/: prd-02-evidence-confidence-metadata.md  prd-02-tasks.md
docs/api/: conformance.md  engines.md  finding.md  messages.md  scan-result.md  scan.md  utils.md
docs/decisions/: adr-001-engine-separation.md  adr-002-oop-utils.md  adr-003-error-codes.md  adr-004-no-exceptions.md
docs/diagrams/: 01_system_overview.mmd  02_detection_stages.mmd  03_toxic_flows.mmd  04_false_positive.mmd  05_fp_layers.mmd
docs/guides/: adding-a-rule.md  adding-engine.md  cicd-integration.md  configuration.md  conformance.md  creds-and-chain.md  docker.md  engines.md  evidence-lifecycle.md  false-positive-reduction.md  getting-started.md  manual-testing.md  mcp-server-scanning.md  pinning.md  publishing.md  refactoring-guide.md  suppression.md  toxic-flows.md  writing-rules.md
scanner/: __init__.py  ave_meta.py  bawbel_pre_commit.py  cli.py  fetcher.py  justified_suppression.py  messages.py  owasp_mcp_map.py  pinner.py  pre_commit_init.py  scanner.py  suppression.py  sync_records.py  toberemovecli.py  utils.py
scanner/cli/: __init__.py  cmd_accept.py  cmd_chain.py  cmd_conform.py  cmd_creds.py  cmd_init.py  cmd_pin.py  cmd_report.py  cmd_scan.py  cmd_scan_card.py  cmd_scan_conformance.py  cmd_version.py
scanner/cli/shared/: __init__.py  constants.py  display.py  formatters.py  utils.py
scanner/config/: __init__.py  default.py
scanner/conformance/: __init__.py  checks.py  scorer.py
scanner/core/: dedup.py  fp_pipeline.py  preprocessor.py  scoring.py
scanner/core/toxic_flows/: __init__.py  detector.py  flows.py  models.py
scanner/engines/: __init__.py  llm_engine.py  magika_engine.py  meta_analyzer.py  pattern.py  pattern_engine.py  sandbox_engine.py  semgrep_engine.py  yara_engine.py
scanner/engines/sandbox/: Dockerfile  harness.py
scanner/models/: __init__.py  acceptance.py  finding.py  result.py  severity.py
scanner/research/: mcp_registry_scan_2026.json
scanner/rules/semgrep/: ave_rules.yaml
scanner/rules/yara/: ave_rules.yar
scanner/suppression/: bawbelignore.py  inline.py  justified.py
scanner/toxic_flows/: __init__.py  capabilities.py  detector.py  flows.py  models.py
scripts/: README.md  diagnose.sh  manual_testing_creds_chain.md  manual_testing_suppress.md  scan_mcp_registry.py  scan_smithery.py  setup.sh  smithery_scan_2026.json  smithery_scan_results.json  test_all.sh  update_log.py
tests/: malicious_skill.md  test_scanner.py
tests/fixtures/golden/: malicious_scan.json
tests/fixtures/mcp/: sample.json
tests/fixtures/skills/: .bawbel-pins.json
tests/fixtures/skills/malicious/: malicious_skill.md  test_owasp_mcp_skill.md
tests/unit/: test_acceptance.py  test_cmd_chain.py  test_cmd_conform.py  test_cmd_creds.py  test_cmd_scan_extra.py  test_conformance.py  test_dedup.py  test_evidence_lifecycle.py  test_finding.py  test_finding_evidence_metadata.py  test_fp_pipeline.py  test_justified_suppression.py  test_output_contracts.py  test_pattern_engine.py  test_preprocessor.py  test_result.py  test_scoring.py  test_suppression_bawbelignore.py  test_suppression_inline.py  test_utils.py
tests/unit/engines/: test_llm_engine.py  test_pattern_engine.py  test_yara_engine.py
tests/unit/models/: test_models.py  test_severity.py
